# silver-p2p

./: Cargo.toml  README.md
src/: block_validator.rs  bootstrap_connector.rs  broadcast.rs  config.rs  connection_error_recovery.rs  connection_pool.rs  consensus.rs  error.rs  event_loop.rs  handshake.rs  health_monitor.rs  lib.rs  message_chunking.rs  message_error_handler.rs  message_handler.rs  message_handler_phase5.rs  metrics.rs  network_manager.rs  network_message_integration.rs  peer_discovery_coordinator.rs  peer_discovery_loop.rs  peer_manager.rs  rate_limiter.rs  reconnection_manager.rs  shutdown_coordination.rs  tcp_listener.rs  transaction_pool.rs  types.rs  unicast.rs
tests/: broadcast_property_tests.rs  connection_error_recovery_integration_tests.rs  failover_scenario_tests.rs  graceful_shutdown_tests.rs  health_scoring_property_tests.rs  load_tests.rs  message_error_handling_tests.rs  minimum_peer_threshold_property_tests.proptest-regressions  minimum_peer_threshold_property_tests.rs  multi_node_integration_tests.rs  network_partition_simulation_tests.rs  network_statistics_accuracy_property_tests.proptest-regressions  network_statistics_accuracy_property_tests.rs  peer_information_accuracy_property_tests.rs  peer_list_queries_tests.rs  peer_metrics_queries_tests.rs  ping_pong_property_tests.rs  rate_limit_property_tests.proptest-regressions  rate_limit_property_tests.rs
