[package]
name = "silver-p2p"
version = "2.5.3"
edition.workspace = true

[dependencies]
tokio = { version = "1.35", features = ["full"] }
libp2p = { version = "0.53", features = ["tcp", "noise", "identify"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
parking_lot = "0.12"
dashmap = "5.5"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
bytes = "1.5"
anyhow = "1.0"
log = "0.4"
toml = "0.8"

[dev-dependencies]
proptest = "1.4"
tokio-test = "0.4"
