[package]
name = "silver-p2p"
version = "2.5.4"
edition = "2021"
rust-version = "1.90"
authors = ["SilverBitcoin Team <team@silverbitcoin.org>"]
license = "Apache-2.0"
repository = "https://github.com/silverbitcoin/silverbitcoin"
homepage = "https://silverbitcoin.org"
keywords = ["p2p", "networking", "blockchain"]
categories = ["network-programming"]
description = "P2P networking for SilverBitcoin 512-bit blockchain"

[dependencies]
tokio = { version = "1.48", features = ["full"] }
libp2p = { version = "0.53", features = ["tcp", "noise", "identify"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
parking_lot = "0.12"
dashmap = "5.5"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.8", features = ["std", "std_rng"] }
bytes = "1.5"
anyhow = "1.0"

# Logging
silver-logging = { path = "../silver-logging" }
log = "0.4"
toml = "0.8"

# Cryptography (512-bit only)
sha2 = "0.10"

[dev-dependencies]
proptest = "1.4"
tokio-test = "0.4"
